[gd_scene load_steps=41 format=2]

[ext_resource path="res://scenes/objects/CoinBad.gd" type="Script" id=1]
[ext_resource path="res://images/objects/coinbad/coinbad1.png" type="Texture" id=2]
[ext_resource path="res://images/objects/coinbad/coinbad2.png" type="Texture" id=3]
[ext_resource path="res://images/objects/coinbad/coinbad3.png" type="Texture" id=4]
[ext_resource path="res://scenes/master/SFX.gd" type="Script" id=5]
[ext_resource path="res://sounds/objects/coin.wav" type="AudioStream" id=6]
[ext_resource path="res://images/objects/bonusblock/bonus2-1.png" type="Texture" id=7]
[ext_resource path="res://images/objects/bonusblock/bonus2-2.png" type="Texture" id=8]
[ext_resource path="res://images/objects/bonusblock/bonus2-5.png" type="Texture" id=9]
[ext_resource path="res://images/objects/bonusblock/bonus2-3.png" type="Texture" id=10]
[ext_resource path="res://images/objects/bonusblock/bonus2-4.png" type="Texture" id=11]
[ext_resource path="res://sounds/objects/powerup_appear.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/objects/brick.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/objects/brick_smash.wav" type="AudioStream" id=14]
[ext_resource path="res://images/objects/bonusblock/empty.png" type="Texture" id=15]
[ext_resource path="res://images/objects/coin/coin1.png" type="Texture" id=16]
[ext_resource path="res://images/objects/brick/break_particle3.png" type="Texture" id=17]
[ext_resource path="res://images/objects/brick/break_particle4.png" type="Texture" id=18]
[ext_resource path="res://images/objects/brick/break_particle1.png" type="Texture" id=19]
[ext_resource path="res://images/objects/bonusblock/invisible.png" type="Texture" id=20]
[ext_resource path="res://images/objects/brick/snowy.png" type="Texture" id=21]
[ext_resource path="res://images/objects/brick/break_particle2.png" type="Texture" id=22]
[ext_resource path="res://images/objects/brick/normal.png" type="Texture" id=23]
[ext_resource path="res://scenes/objects/PowerupFireFlower.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/objects/PowerupEgg.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/particles/BrickSmash.tres" type="Material" id=26]
[ext_resource path="res://scenes/objects/Block.gd" type="Script" id=27]

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 1

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "Bonus",
"speed": 20.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Brick",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "BrickSnow",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "Invisible",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 16, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 12 )

[sub_resource type="AnimatedTexture" id=8]
frames = 4
fps = 15.0
frame_0/texture = ExtResource( 19 )
frame_1/texture = ExtResource( 22 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 17 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 18 )
frame_3/delay_sec = 0.0

[sub_resource type="Animation" id=11]
resource_name = "coin"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Coin:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -55 ), Vector2( 0, -64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Coin:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmashParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Coin:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "invisible"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmashParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Coin:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 12 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "smash"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.025 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmashParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.025 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.025 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[sub_resource type="CircleShape2D" id=14]
radius = 128.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="CoinBad" type="Area2D" groups=["coins"]]
z_index = -1
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="BonusBlockTemp" type="Node2D" parent="."]
modulate = Color( 1, 0.74902, 0.556863, 1 )

[node name="BonusBlock" type="StaticBody2D" parent="BonusBlockTemp" groups=["blocks"]]
z_index = 1
script = ExtResource( 27 )
type = "Bonus"
initial_animation = "Empty"
contents_small = ExtResource( 25 )
contents_big = ExtResource( 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BonusBlockTemp/BonusBlock"]
material = SubResource( 12 )
frames = SubResource( 15 )
animation = "Bonus"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusBlockTemp/BonusBlock"]
position = Vector2( 0, -1 )
shape = SubResource( 16 )

[node name="Hitbox" type="Area2D" parent="BonusBlockTemp/BonusBlock"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusBlockTemp/BonusBlock/Hitbox"]
shape = SubResource( 3 )

[node name="AboveHitbox" type="Area2D" parent="BonusBlockTemp/BonusBlock"]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusBlockTemp/BonusBlock/AboveHitbox"]
position = Vector2( 0, -28 )
shape = SubResource( 4 )

[node name="SFX" type="Node2D" parent="BonusBlockTemp/BonusBlock"]
script = ExtResource( 5 )

[node name="Coin" type="AudioStreamPlayer2D" parent="BonusBlockTemp/BonusBlock/SFX"]
stream = ExtResource( 6 )

[node name="Bonus" type="AudioStreamPlayer2D" parent="BonusBlockTemp/BonusBlock/SFX"]
stream = ExtResource( 12 )

[node name="Brick" type="AudioStreamPlayer2D" parent="BonusBlockTemp/BonusBlock/SFX"]
stream = ExtResource( 13 )

[node name="Smash" type="AudioStreamPlayer2D" parent="BonusBlockTemp/BonusBlock/SFX"]
stream = ExtResource( 14 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="BonusBlockTemp/BonusBlock"]
visible = false
rect = Rect2( -128, -128, 256, 256 )
pause_animations = false
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false
process_parent = true
physics_process_parent = true

[node name="DestroyTimer" type="Timer" parent="BonusBlockTemp/BonusBlock"]
process_mode = 0
one_shot = true

[node name="SmashParticles" type="Particles2D" parent="BonusBlockTemp/BonusBlock"]
position = Vector2( 0, -8 )
emitting = false
amount = 4
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = ExtResource( 26 )
texture = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BonusBlockTemp/BonusBlock"]
pause_mode = 2
autoplay = "default"
anims/coin = SubResource( 11 )
anims/default = SubResource( 9 )
anims/invisible = SubResource( 13 )
anims/smash = SubResource( 10 )

[node name="Coin" type="Sprite" parent="BonusBlockTemp/BonusBlock"]
visible = false
position = Vector2( 0, -16 )
z_index = -1
texture = ExtResource( 16 )

[node name="InvisibleShimmer" type="Area2D" parent="BonusBlockTemp/BonusBlock"]
visible = false
collision_layer = 0
collision_mask = 70
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusBlockTemp/BonusBlock/InvisibleShimmer"]
shape = SubResource( 14 )

[node name="CollisionShape2DCoin" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSpriteCoin" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="DestroyTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SFX" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Coin" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 6 )
pitch_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="BonusBlockTemp/BonusBlock/InvisibleShimmer" to="BonusBlockTemp/BonusBlock" method="_on_InvisibleShimmer_body_entered"]
[connection signal="body_exited" from="BonusBlockTemp/BonusBlock/InvisibleShimmer" to="BonusBlockTemp/BonusBlock" method="_on_InvisibleShimmer_body_exited"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
